--- a/_posts/2024-11-17-GEBRA-week3.md
+++ b/_posts/2024-11-17-GEBRA-week3.md
@@ -13,9 +13,9 @@ author: Yongjun Song
 {% assign difference_in_seconds = current_date | minus: past_date %}
 {% assign days_difference = difference_in_seconds | divided_by: 86400 | floor %}
 
-Let's talk about Product Market Fit  today.
+Let's talk about Product Market Fit
 
-## Product Market Fit
+## What Is Product Market Fit
 
 Product-Market Fit (PMF) is the point at which a product effectively satisfies a strong market demand. Although it can be defined in various ways, PMF represents a crucial concept and framework for building a successful business. Achieving PMF means creating a product that solves genuine problems and delivering it to the people who need it. It’s a key milestone for all service providers.
 
@@ -32,7 +32,7 @@ The pyramid above illustrates the components of PMF, each corresponding to a ste
 5. Iterate based on feedback
 
 
-## Market of variant interpretation software
+## Market for Variant Interpretation Software
 
 WWhen it comes to variant interpretation software, we cannot simply target the same customers who purchase WES (Whole Exome Sequencing) and WGS (Whole Genome Sequencing) services. This is because GEBRA, by its very nature, differs from those genomic tests.
 
