--- a/_posts/2024-11-17-GEBRA-week3.md
+++ b/_posts/2024-11-17-GEBRA-week3.md
@@ -12,126 +12,101 @@ author: Yongjun Song
 {% assign current_date = site.time | date: '%s' %}
 {% assign difference_in_seconds = current_date | minus: past_date %}
 {% assign days_difference = difference_in_seconds | divided_by: 86400 | floor %}
+# Let’s Talk About Product-Market Fit
 
-Let's talk about Product Market Fit
+## What Is Product-Market Fit?
 
-## What Is Product Market Fit
+**Product-Market Fit (PMF)** is the point at which a product effectively satisfies a significant market demand. While PMF can be defined in various ways, it represents a crucial concept and framework for building a successful business. Achieving PMF means creating a product that solves real problems and delivering it to the people who need it. It’s a key milestone for all service providers.
 
-Product-Market Fit (PMF) is the point at which a product effectively satisfies a strong market demand. Although it can be defined in various ways, PMF represents a crucial concept and framework for building a successful business. Achieving PMF means creating a product that solves genuine problems and delivering it to the people who need it. It’s a key milestone for all service providers.
+![Product Market Fit - by Dan Olsen](assets/image/pmf_pyramid.webp){: width="400px" }
 
-![Product Market Fit - by Dan Olsen](https://github.com/thedrakesng/thedrakesng.github.io/assets/image/pmf_pyramid.webp)
-
-The pyramid above illustrates the components of PMF, each corresponding to a step in the journey toward finding the right fit:
+The pyramid above illustrates the key components of PMF. Each component corresponds to a step on the journey toward finding the right fit:
 
 **Steps to Find PMF:**
-
 1. Define your market
-2. Understand the market's pain points
+2. Understand the market’s pain points
 3. Align your value proposition
-4. Develop your product (Features & UX)
+4. Develop your product (features & user experience)
 5. Iterate based on feedback
-
 
 ## Market for Variant Interpretation Software
 
-WWhen it comes to variant interpretation software, we cannot simply target the same customers who purchase WES (Whole Exome Sequencing) and WGS (Whole Genome Sequencing) services. This is because GEBRA, by its very nature, differs from those genomic tests.
+In the case of variant interpretation software, we cannot simply target the same clients who purchase WES (Whole Exome Sequencing) and WGS (Whole Genome Sequencing) services. GEBRA, by nature, differs from these genomic tests, necessitating a unique market approach.
 
-To understand this market, consider the following diagram:
+![Market definition from NetMBA.com](assets/image/marketdefinition_NetMBA.com.gif){: width="400px" }
 
-![Market definition from NetMBA.com](https://github.com/thedrakesng/thedrakesng.github.io/assets/image/marketdefinition_NetMBA.com.gif)
+**Potential Market:**  
+If we define GEBRA as an interpretation software that provides accurate genomic test interpretations and boosts productivity, then its potential market size corresponds to the entire genomic testing market.
 
-Potential Market:
+**Available Market:**  
+The available market would be those who conduct genomic testing in-house, such as institutions, core labs, hospitals, and service providers (including 3billion itself).
 
-We define GEBRA as an interpretation software that provides accurate genomic test interpretation and boosts productivity for professionals in the field, then the potential market size corresponds to the entire market for genomic tests.
-
-Available Market:
-
-The available market would be those who conduct genomic testing themselves—this includes institutions, core labs, hospitals, and service providers (such as 3billion itself).
-
-Penetrated Market:
-
-Once users adopt the software, they form the penetrated market. Today, multiple hospitals, diagnostic labs, and other organizations have integrated interpretation software into their workflows.
+**Penetrated Market:**  
+Once organizations adopt the software, they form the penetrated market. Today, multiple hospitals, diagnostic labs, and related entities have integrated interpretation software solutions.
 
 ## Identifying the Market’s Pain Points
 
-After defining the market, the next step is to pinpoint its pain points. The core idea is to understand what challenges or inefficiencies exist, so we can address them directly.
+After defining the market, the next step is to pinpoint its pain points. Understanding these challenges guides you in offering a solution that genuinely improves workflows and outcomes.
 
-A simple value equation is helpful here:
+Consider this simple value equation:
 
-$\text{Value} = \text{Benefits} - \text{Cost}$
+$$
+\text{Value} = \text{Benefits} - \text{Cost}
+$$
 
-To increase product value, we can either increase the benefits or reduce the costs for the customer. Discovering the market’s pain points helps guide us in achieving both goals.
+To increase product value, we either increase benefits or reduce costs for the customer. Identifying pain points helps guide both of these improvements.
 
-How did we discover the pain points at 3billion?
+**How Did We Discover the Pain Points at 3billion?**  
+1. Conducting user interviews
+2. Leveraging our in-house genetics experts
 
-1. Expanding the benefit of the market
-2. Reducing the cost of the market
-
-Through multiple iterations of user interviews and insights from our internal team, we identified pain points that aligned neatly with GEBRA’s advantages.
-
-Discovery of the pain point can be done by numerous methods, but 3billion took simple approaches by:
-
-1. Interviewing users
-2. Having an internal expert
-
-Through multiple iterations of user interview, and thanks to our in-house genetics team. We were able to discover the pain point, and lucky for us it aligned to advantages of GEBRA. 
-
+Through these efforts, we identified pain points that aligned well with GEBRA’s strengths.
 
 ## Aligning the Value Proposition
 
-Once the pain points are clear, the product must be aligned with the value proposition—this requires constant communication, well-defined principles, and a clear vision.
+Once you understand the pain points, the product must align with the value proposition. This requires continuous communication, clear principles, and a strong vision.
 
-When value proposition alignment is successful, the following outcomes occur:
+When alignment is successful, these outcomes occur:
 
-1. Customer Relevance:
-Customers feel the product addresses a genuine need.
+1. **Customer Relevance:**  
+   The product addresses a genuine need.  
+   *Measured by:* Interviews, Surveys, Market Segmentation, User Testing
 
-*Measured by*: Interviews, Surveys, Market Segmentation, User Testing
+2. **Clear Differentiation:**  
+   Customers understand why your product is superior to competitors.  
+   *Measured by:* Competitive Benchmarking, Brand Perception Studies
 
-2. Clear Differentiation:
-Customers understand why your product is superior to competitors.
+3. **Consistent Messaging:**  
+   Marketing, sales, and support all convey a coherent value promise.  
+   *Measured by:* Brand Audits, Stakeholder Interviews, Content Analysis
 
-*Measured by*: Competitive Benchmarking, Brand Perception Studies
-
-3. Consistent Messaging:
-Marketing, sales, and support channels communicate a cohesive message that reinforces the value proposition.
-
-*Measured by*: Brand Audits, Stakeholder Interviews, Content Analysis
-
-4. Higher Customer Satisfaction:
-When customers receive the value they expect, satisfaction, loyalty, and referrals increase.
-
-*Measured by*: CSAT Surveys, NPS, Customer Retention/Churn Analysis
+4. **Higher Customer Satisfaction:**  
+   When customers receive the promised value, satisfaction and loyalty increase.  
+   *Measured by:* CSAT, NPS, Retention/Churn Analysis, Support Ticket Reviews
 
 ## Developing the Product
 
-With a value proposition in place, the next step is product development. While the details of development aren’t the focus here, it’s important to consider two overarching dynamics:
+Next, you must develop the product. While specific development details vary, consider two overarching dynamics:
 
-1. Tech push
+1. **Tech Push:**  
+   Products driven by technological innovation and scientific breakthroughs. The focus is on advancing what’s possible.
 
-"Tech push" refers to a strategy or situation where new technologies or products are developed primarily due to technological advancements or scientific breakthroughs within a company or research institution. In this scenario, the driving force behind introducing a product to the market is the technology itself.
+2. **Market Pull:**  
+   Products shaped by identified customer needs and market demands. The focus is on delivering solutions to actual problems.
 
-*Focus*: Advancing what is possible with new tech.
-
-2. Market pull
-
-"Market pull" is the opposite scenario, where the motivation to develop or refine a product originates from identified customer needs, market demands, or emerging trends. Here, the market signals what kind of product or improvements it wants, and companies respond by creating solutions that address these explicit needs. 
-
-*Focus*: Delivering solutions to existing problems.
-
-Personally I believe "Market pull" are often neglected in some field. There is not doubt that the technological advance must be considered and the company shall not fall behind in such trend, but I believe that the essence of the product lies in solving a problem of the customers.
+While technological advancement is critical, I believe the essence of any product lies in addressing the customer’s real-world challenges—something often overlooked in certain fields.
 
 ## Conclusion
 
 Product development is a continuous effort to achieve Product-Market Fit. PMF is built upon four major pillars:
 
-- Defining the market
-- Identifying pain points
-- Aligning the value proposition
+- Defining the market  
+- Identifying pain points  
+- Aligning the value proposition  
 - Developing the product accordingly
 
-These steps should be repeated in a cycle of constant iteration. GEBRA is on its way to finding its PMF, and we hope the results are fruitful.
+By constantly iterating through these steps, you move closer to achieving PMF. GEBRA is on its journey, and we look forward to fruitful outcomes.
 
-Finally, I am sharing a link to one of my [favorite video from YC](https://www.ycombinator.com/library/5z-the-real-product-market-fit). Have a look and feel free to share your ideas.
+For further insight, check out one of my [favorite videos from Y Combinator](https://www.ycombinator.com/library/5z-the-real-product-market-fit).
 
-*Thank you for reading. Feel free to contact me by email if you have any thoughts or questions, feel free to leave a comment. See you in the next post!*  
+*Thank you for reading! Feel free to contact me via email. See you in the next post!*
