--- a/_posts/2024-11-17-GEBRA-week3.md
+++ b/_posts/2024-11-17-GEBRA-week3.md
@@ -50,9 +50,7 @@ After defining the market, the next step is to pinpoint its pain points. Underst
 
 Consider this simple value equation:
 
-$$
-\text{Value} = \text{Benefits} - \text{Cost}
-$$
+$\text{Value} = \text{Benefits} - \text{Cost}$
 
 To increase product value, we either increase benefits or reduce costs for the customer. Identifying pain points helps guide both of these improvements.
 
