--- a/_posts/2024-11-17-GEBRA-week3.md
+++ b/_posts/2024-11-17-GEBRA-week3.md
@@ -18,7 +18,7 @@ author: Yongjun Song
 
 **Product-Market Fit (PMF)** is the point at which a product effectively satisfies a significant market demand. While PMF can be defined in various ways, it represents a crucial concept and framework for building a successful business. Achieving PMF means creating a product that solves real problems and delivering it to the people who need it. It’s a key milestone for all service providers.
 
-![Product Market Fit - by Dan Olsen](https://thedrakesng.github.io/assets/image/pmf_pyramid.webp){: width="400px" }
+![Product Market Fit - by Dan Olsen](https://raw.githubusercontent.com/thedrakesng/thedrakesng.github.io/refs/heads/master/assets/image/pmf_pyramid.webp){: width="400px" }
 
 The pyramid above illustrates the key components of PMF. Each component corresponds to a step on the journey toward finding the right fit:
 
@@ -33,7 +33,7 @@ The pyramid above illustrates the key components of PMF. Each component correspo
 
 In the case of variant interpretation software, we cannot simply target the same clients who purchase WES (Whole Exome Sequencing) and WGS (Whole Genome Sequencing) services. GEBRA, by nature, differs from these genomic tests, necessitating a unique market approach.
 
-![Market definition from NetMBA.com](https://thedrakesng.github.io/assets/image/marketdefinition_NetMBA.com.gif){: width="400px" }
+![Market definition from NetMBA.com](https://raw.githubusercontent.com/thedrakesng/thedrakesng.github.io/refs/heads/master/assets/image/marketdefinition_NetMBA.com.gif){: width="400px" }
 
 **Potential Market:**  
 If we define GEBRA as an interpretation software that provides accurate genomic test interpretations and boosts productivity, then its potential market size corresponds to the entire genomic testing market.
