--- a/_posts/2024-11-17-GEBRA-week3.md
+++ b/_posts/2024-11-17-GEBRA-week3.md
@@ -107,4 +107,9 @@ By constantly iterating through these steps, you move closer to achieving PMF. G
 
 For further insight, check out one of my [favorite videos from Y Combinator](https://www.ycombinator.com/library/5z-the-real-product-market-fit).
 
+Reference:
+
+Image 1. A Playbook for Achieving Product Market Fit - Dan Olsen
+Image 2. https://www.netmba.com/marketing/market/definition/
+
 *Thank you for reading! Feel free to contact me via email. See you in the next post!*
