--- a/_posts/2024-11-17-GEBRA-week3.md
+++ b/_posts/2024-11-17-GEBRA-week3.md
@@ -92,7 +92,7 @@ Next, you must develop the product. While specific development details vary, con
 2. **Market Pull:**  
    Products shaped by identified customer needs and market demands. The focus is on delivering solutions to actual problems.
 
-While technological advancement is critical, I believe the essence of any product lies in addressing the customer’s real-world challenges—something often overlooked in certain fields.
+While technological advancement is critical, I believe the essence of any product lies in addressing the customer’s real-world challenges—something often overlooked in certain fields. Especially in fields where are very narrow and deep, market pull is hardly made.
 
 ## Conclusion
 
