--- a/_posts/2024-11-17-GEBRA-week3.md
+++ b/_posts/2024-11-17-GEBRA-week3.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "GEBRA: Week 3, Product Market Fit for genomic diagnosis software"
+title: "GEBRA: Week 3, Product Market Fit for variant interpretation software"
 date: 2024-11-21
 tags: GEBRA
 categories: GEBRA
