--- a/_posts/2025-06-20-Updates.md
+++ b/_posts/2025-06-20-Updates.md
@@ -4,7 +4,7 @@ title: "It's been a while"
 date: 2025-06-21
 tags: Ideas
 categories: Ideas
-published: false
+published: true
 author: Yongjun Song
 ---
 
