--- a/_posts/2025-06-20-Updates.md
+++ b/_posts/2025-06-20-Updates.md
@@ -3,7 +3,7 @@ layout: single
 title: "It's been a while"
 date: 2025-06-21
 tags: Ideas
-categories: Ideas
+categories: General
 published: true
 author: Yongjun Song
 ---
